--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,9 @@
 {
     "env": {
-        "browser": true,
-        "commonjs": true,
-        "es6": true
+        "browser": false,
+        "es6": true,
+        "mongo": true,
+        "node": true
     },
     "extends": [
         "airbnb-base"
@@ -17,6 +18,5 @@
     "rules": {
         "linebreak-style" : 0,
         "import/newline-after-import":0
-
     }
 }
