--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "Sistema de cadastro de cursos e alunos da paralaxy",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon"
   },
   "author": "Ricardo Bugan",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.7.1",
+    "nodemon": "^1.19.2"
   },
   "devDependencies": {
     "eslint": "^6.4.0",
